--- a/assets/css/experiencia.css
+++ b/assets/css/experiencia.css
@@ -1,6 +1,6 @@
 .experiencia-container {
     background-color: var(--cinza-claro);
-    height: 300vh;
+    height: 330vh;
 }
 
 .experiencia-titulo {
@@ -12,7 +12,7 @@
 
 .experiencia-apeperia {
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
 
 .experiencia_card-apeperia {
@@ -58,6 +58,177 @@
 }
 
 .experiencia_botao-repositorio-apeperia {
+    font-size: 16px;
+    width: 120px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    border-radius: 5px;
+}
+
+.experiencia-freeway {
+    display: flex;
+    justify-content: center;
+    padding-top: 120px;
+}
+
+.experiencia_card-freeway {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 50px 0 0;
+}
+
+.experiencia_titulo-freeway {
+    font-weight: bold;
+    font-size: 23px;
+    padding-bottom: 10px;
+}
+
+.experiencia_texto-freeway {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+
+.experiencia_botoes-freeway {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+}
+
+.experiencia_botao-demo-freeway {
+    font-size: 16px;
+    width: 95px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    background-color: #2A7AE4;
+    color: #fff;
+    border-radius: 5px;
+    transition: background .50s;
+}
+
+.experiencia_botao-demo-freeway:hover {
+ 
+    background-color: blue;
+}
+
+.experiencia_botao-repositorio-freeway {
+    font-size: 16px;
+    width: 120px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    border-radius: 5px;
+}
+
+.experiencia-netflix {
+    display: flex;
+    justify-content: center;
+    padding-top: 120px;
+}
+
+.experiencia_card-netflix {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 50px 0 65px;
+}
+
+.experiencia_titulo-netflix {
+    font-weight: bold;
+    font-size: 23px;
+    padding-bottom: 10px;
+}
+
+.experiencia_texto-netflix {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+
+.experiencia_botoes-netflix {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+}
+
+.experiencia_botao-demo-netflix {
+    font-size: 16px;
+    width: 95px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    background-color: #2A7AE4;
+    color: #fff;
+    border-radius: 5px;
+    transition: background .50s;
+}
+
+.experiencia_botao-demo-netflix:hover {
+ 
+    background-color: blue;
+}
+
+.experiencia_botao-repositorio-netflix {
+    font-size: 16px;
+    width: 120px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    border-radius: 5px;
+}
+
+.experiencia-barbearia {
+    display: flex;
+    justify-content: center;
+    padding-top: 120px;
+}
+
+.experiencia_card-barbearia {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 50px 0 0;
+}
+
+.experiencia_titulo-barbearia {
+    font-weight: bold;
+    font-size: 23px;
+    padding-bottom: 10px;
+}
+
+.experiencia_texto-barbearia {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+
+.experiencia_botoes-barbearia {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+}
+
+.experiencia_botao-demo-barbearia {
+    font-size: 16px;
+    width: 95px;
+    height: 40px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0 #000;
+    background-color: #2A7AE4;
+    color: #fff;
+    border-radius: 5px;
+    transition: background .50s;
+}
+
+.experiencia_botao-demo-barbearia:hover {
+ 
+    background-color: blue;
+}
+
+.experiencia_botao-repositorio-barbearia {
     font-size: 16px;
     width: 120px;
     height: 40px;
